[project]
name = "hidream-o1-image-gen"
version = "0.1.0"
description = "MCP server for HiDream O1 image generation and editing via ComfyUI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
]

[project.scripts]
hidream-o1-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
